infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: casa-church
  labels:
    name: casa-church
